--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>Personal Website</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <script src="index.js"></script>
+<body class="container">
+    <script src="index.js">
+        
+    </script>
 </body>
 <footer>
 </footer>
