--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+    <!-- <link rel="shortcut icon" type="image/png" href="img/favicon.png"> -->
     <link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet'>
     <title>Personal Website</title>
 </head>
 <body class="container">
-    <script src="index.js">
-    </script>
+    <script src="javascript/script.js" charset="utf-8"></script>
 </body>
 </html>
