--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <!-- <link rel="shortcut icon" type="image/png" href="img/favicon.png"> -->
     <link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet'>
-    <title>Personal Website</title>
+    <title>Personal Website Change</title>
 </head>
 <body class="container">
     <script src="javascript/script.js" charset="utf-8"></script>
