Sections of website

--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
     <title>Personal Website</title>
   </head>
   <body class="container">
-    <p>TEST</p>
+    <div class="sidebar">sidebar</div>
+    <header class="header">Header</header>
+    <div class="players">Top 3 players</div>
+    <section class="features">Features</section>
+    <div class="story__pictures">Story pictures</div>
+    <div class="story__contejnt">Story content</div>
+    <section class="homes">Homes</section>
+    <section class="gallery">Gallery</section>
+    <footer class="footer">Footer</footer>
     <script src="javascript/script.js" charset="utf-8"></script>
   </body>
 </html>
