--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <div class="players">Top 3 players</div>
     <section class="features">Features</section>
     <div class="story__pictures">Story pictures</div>
-    <div class="story__contejnt">Story content</div>
-    <section class="homes">Homes</section>
+    <div class="story__content">Story content</div>
+    <section class="stadium">Stadium</section>
     <section class="gallery">Gallery</section>
     <footer class="footer">Footer</footer>
     <script src="javascript/script.js" charset="utf-8"></script>
