--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css?family=Nunito"
       rel="stylesheet"
     />
-    <title>Personal Website</title>
+    <title>Football Website</title>
   </head>
   <body class="container">
     <div class="sidebar">sidebar</div>
