background-color test

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section class="features">Features</section>
     <div class="story__pictures">Story pictures</div>
     <div class="story__content">Story content</div>
-    <section class="stadium">Stadium</section>
+    <section class="homes">Homes</section>
     <section class="gallery">Gallery</section>
     <footer class="footer">Footer</footer>
     <script src="javascript/script.js" charset="utf-8"></script>
