favicons added to web page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,27 @@
     <div class="sidebar">sidebar</div>
     <header class="header">Header</header>
     <div class="players">Top 3 players</div>
-    <section class="features">Features</section>
+    <section class="features">
+      <div class="feature">
+        <img class="feature__icon" src="img/football-favicon.png" />
+      </div>
+      <div class="feature">
+        <img class="feature__icon" src="img/lions-favicon.png" />
+      </div>
+      <div class="feature">
+        <img class="feature__icon" src="img/stadium-favicon.png" />
+      </div>
+      <div class="feature">
+        <img class="feature__icon" src="img/secure-favicon.png" />
+      </div>
+      <div class="feature">
+        <img class="feature__icon" src="img/pin-favicon.png" />
+      </div>
+      <div class="feature">
+        <img class="feature__icon" src="img/trophy-favicon.png" />
+      </div>
+    </section>
+
     <div class="story__pictures">Story pictures</div>
     <div class="story__content">Story content</div>
     <section class="homes">Homes</section>
