almost all features text added

--- a/index.html
+++ b/index.html
@@ -16,24 +16,51 @@
     <div class="sidebar">sidebar</div>
     <header class="header">Header</header>
     <div class="players">Top 3 players</div>
+    <!-- features section -->
     <section class="features">
       <div class="feature">
-        <img class="feature__icon" src="img/football-favicon.png" />
+        <img class="feature__icon" src="img/lions-favicon.png" />
+        <h4 class="heading-4">Membership</h4>
+        <p class="features__text">
+          Creating a Blue Lions account unlocks exclusive video content
+          including match highlights, player interviews and unique analysis.
+        </p>
       </div>
       <div class="feature">
-        <img class="feature__icon" src="img/lions-favicon.png" />
+        <img class="feature__icon" src="img/football-favicon.png" />
+        <h4 class="heading-4">Official Supporters Clubs</h4>
+        <p class="features__text">
+          We are proud to have 225 Official Supporters' Clubs in countries all
+          over the world, including England, Australia, USA and Japan.
+        </p>
       </div>
       <div class="feature">
         <img class="feature__icon" src="img/stadium-favicon.png" />
+        <h4 class="heading-4">Tickets & Hospitality</h4>
+        <p class="features__text">
+          A Blue Lions membership allows supporters priority purchasing matchday
+          tickets. Hospitility packages are also availiable, our stadium playing
+          host as a premium conference location.
+        </p>
       </div>
       <div class="feature">
-        <img class="feature__icon" src="img/secure-favicon.png" />
+        <img class="feature__icon" src="" />
       </div>
       <div class="feature">
         <img class="feature__icon" src="img/pin-favicon.png" />
+        <h4 class="heading-4">Location</h4>
+        <p class="features__text">
+          Our stadium, ticket office and merchandise shop is all located in the
+          heart of our city.
+        </p>
       </div>
       <div class="feature">
         <img class="feature__icon" src="img/trophy-favicon.png" />
+        <h4 class="heading-4">Trophy</h4>
+        <p class="features__text">
+          The Blue Lions have won it all! 25 league titles, 15 domestic cups and
+          8 international triumphs since we were founded in 1882.
+        </p>
       </div>
     </section>
 
