features text finished

--- a/index.html
+++ b/index.html
@@ -44,14 +44,19 @@
         </p>
       </div>
       <div class="feature">
-        <img class="feature__icon" src="" />
-      </div>
-      <div class="feature">
         <img class="feature__icon" src="img/pin-favicon.png" />
         <h4 class="heading-4">Location</h4>
         <p class="features__text">
           Our stadium, ticket office and merchandise shop is all located in the
           heart of our city.
+        </p>
+      </div>
+      <div class="feature">
+        <img class="feature__icon" src="img/partners.png" />
+        <h4 class="heading-4">Partners</h4>
+        <p class="features__text">
+          We are proud to recognise 18 official club partners this season, as
+          principal, official and women's team partners.
         </p>
       </div>
       <div class="feature">
