final favicon issue resolved

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </p>
       </div>
       <div class="feature">
-        <img class="feature__icon" src="img/partners.png" />
+        <img class="feature__icon" src="img/partners-favicon.png" />
         <h4 class="heading-4">Partners</h4>
         <p class="features__text">
           We are proud to recognise 18 official club partners this season, as
