features proof read

--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
     <div class="sidebar">sidebar</div>
     <header class="header">Header</header>
     <div class="players">Top 3 players</div>
+
     <!-- features section -->
     <section class="features">
       <div class="feature">
         <img class="feature__icon" src="img/lions-favicon.png" />
         <h4 class="heading-4">Membership</h4>
         <p class="features__text">
-          Creating a Blue Lions account unlocks exclusive video content
-          including match highlights, player interviews and unique analysis.
+          Creating a Blue Lions account unlocks exclusive video content,
+          including match highlights, player interviews and analysis.
         </p>
       </div>
       <div class="feature">
@@ -39,15 +40,15 @@
         <h4 class="heading-4">Tickets & Hospitality</h4>
         <p class="features__text">
           A Blue Lions membership allows supporters priority purchasing matchday
-          tickets. Hospitility packages are also availiable, our stadium playing
-          host as a premium conference location.
+          tickets. Hospitility packages are also availiable, our complex playing
+          host to a premium conference center.
         </p>
       </div>
       <div class="feature">
         <img class="feature__icon" src="img/pin-favicon.png" />
         <h4 class="heading-4">Location</h4>
         <p class="features__text">
-          Our stadium, ticket office and merchandise shop is all located in the
+          Our stadium, ticket office and merchandise shop are all located in the
           heart of our city.
         </p>
       </div>
@@ -56,7 +57,7 @@
         <h4 class="heading-4">Partners</h4>
         <p class="features__text">
           We are proud to recognise 18 official club partners this season, as
-          principal, official and women's team partners.
+          principal, official and women's team associates.
         </p>
       </div>
       <div class="feature">
