--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="feature">
         <img class="feature__icon" src="img/lions-favicon.png" />
         <h4 class="heading-4">Membership</h4>
-        <p class="features__text">
+        <p class="feature__text">
           Creating a Blue Lions account unlocks exclusive video content,
           including match highlights, player interviews and analysis.
         </p>
@@ -30,7 +30,7 @@
       <div class="feature">
         <img class="feature__icon" src="img/football-favicon.png" />
         <h4 class="heading-4">Official Supporters Clubs</h4>
-        <p class="features__text">
+        <p class="feature__text">
           We are proud to have 225 Official Supporters' Clubs in countries all
           over the world, including England, Australia, USA and Japan.
         </p>
@@ -38,7 +38,7 @@
       <div class="feature">
         <img class="feature__icon" src="img/stadium-favicon.png" />
         <h4 class="heading-4">Tickets & Hospitality</h4>
-        <p class="features__text">
+        <p class="feature__text">
           A Blue Lions membership allows supporters priority purchasing matchday
           tickets. Hospitility packages are also availiable, our complex playing
           host to a premium conference center.
@@ -47,7 +47,7 @@
       <div class="feature">
         <img class="feature__icon" src="img/pin-favicon.png" />
         <h4 class="heading-4">Location</h4>
-        <p class="features__text">
+        <p class="feature__text">
           Our stadium, ticket office and merchandise shop are all located in the
           heart of our city.
         </p>
@@ -55,7 +55,7 @@
       <div class="feature">
         <img class="feature__icon" src="img/partners-favicon.png" />
         <h4 class="heading-4">Partners</h4>
-        <p class="features__text">
+        <p class="feature__text">
           We are proud to recognise 18 official club partners this season, as
           principal, official and women's team associates.
         </p>
@@ -63,7 +63,7 @@
       <div class="feature">
         <img class="feature__icon" src="img/trophy-favicon.png" />
         <h4 class="heading-4">Trophy</h4>
-        <p class="features__text">
+        <p class="feature__text">
           The Blue Lions have won it all! 25 league titles, 15 domestic cups and
           8 international triumphs since we were founded in 1882.
         </p>
