extra font family added

--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="css/style.css" />
-    <!-- <link rel="shortcut icon" type="image/png" href="img/favicon.png"> -->
+    <!-- Text for the body of the web application -->
     <link
       href="https://fonts.googleapis.com/css?family=Nunito"
+      rel="stylesheet"
+    />
+    <!-- Text for titles within the web application -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
     <title>Football Website</title>
