grid gap added, typo changes

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         <h4 class="heading-4">Tickets & Hospitality</h4>
         <p class="feature__text">
           A Blue Lions membership allows supporters priority purchasing matchday
-          tickets. Hospitility packages are also availiable, our complex playing
-          host to a premium conference center.
+          tickets. Hospitality packages are also availiable, with our complex
+          playing host to a premium conference center.
         </p>
       </div>
       <div class="feature">
@@ -54,7 +54,7 @@
         <h4 class="heading-4">Location</h4>
         <p class="feature__text">
           Our stadium, ticket office and merchandise shop are all located in the
-          heart of our city.
+          heart of the city.
         </p>
       </div>
       <div class="feature">
@@ -69,7 +69,7 @@
         <img class="feature__icon" src="img/trophy-favicon.png" />
         <h4 class="heading-4">Trophy</h4>
         <p class="feature__text">
-          The Blue Lions have won it all! 25 league titles, 15 domestic cups and
+          The Blue Lions have won it all. 25 league titles, 15 domestic cups and
           8 international triumphs since we were founded in 1882.
         </p>
       </div>
