--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
       <div class="feature">
         <img class="feature__icon" src="img/trophy-favicon.png" />
-        <h4 class="heading-4">Trophy</h4>
+        <h4 class="heading-4">Trophies</h4>
         <p class="feature__text">
           The Blue Lions have won it all. 25 league titles, 15 domestic cups and
           8 international triumphs since we were founded in 1882.
