starting work overlapping grid

--- a/index.html
+++ b/index.html
@@ -76,10 +76,23 @@
     </section>
 
     <div class="story__pictures">Story pictures</div>
-    <div class="story__content">Story content</div>
+
+    <!-- Story content section-->
+    <div class="story__content">
+      <h3 class="heading-3">Placeholder 1</h3>
+      <h2 class="heading-2">Placeholder 2</h2>
+      <p class="story__text">
+        Placeholder text for before I've come up with an idea
+      </p>
+      <button class="btn">Find your own home</button>
+    </div>
+
     <section class="homes">Homes</section>
+
     <section class="gallery">Gallery</section>
+
     <footer class="footer">Footer</footer>
+
     <script src="javascript/script.js" charset="utf-8"></script>
   </body>
 </html>
