--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
 
     <!-- Story content section-->
     <div class="story__content">
-      <h3 class="heading-3">Placeholder 1</h3>
-      <h2 class="heading-2">Placeholder 2</h2>
+      <h3 class="heading-3 mb-sm">Placeholder 1</h3>
+      <h2 class="heading-2 mb-md">Placeholder 2</h2>
       <p class="story__text">
         Placeholder text for before I've come up with an idea
       </p>
-      <button class="btn">Find your own home</button>
+      <button class="btn">Placeholder button text</button>
     </div>
 
     <section class="homes">Homes</section>
