aligning grid imgs in story

--- a/index.html
+++ b/index.html
@@ -75,9 +75,13 @@
       </div>
     </section>
 
-    <div class="story__pictures">Story pictures</div>
+    <!-- Story pictures section -->
+    <div class="story__pictures">
+      <img class="story__img--1" src="img/underpass.png" />
+      <img class="story__img--2" src="img/mural.png" />
+    </div>
 
-    <!-- Story content section-->
+    <!-- Story content sectionv -->
     <div class="story__content">
       <h3 class="heading-3 mb-sm">Placeholder 1</h3>
       <h2 class="heading-2 mb-md">Placeholder 2</h2>
@@ -88,8 +92,6 @@
     </div>
 
     <section class="homes">Homes</section>
-
-    <section class="gallery">Gallery</section>
 
     <footer class="footer">Footer</footer>
 
