badge initial placement

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body class="container">
     <!-- Sidebar -->
     <div class="sidebar">
-      <button class="nav-btn"></button>
+      <img class="sidebar__badge" src="img/football-badge.png" alt="badge" />
     </div>
 
     <header class="header">Header</header>
