--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- features section -->
     <section class="features">
       <div class="feature">
-        <img class="feature__icon" src="img/lions-favicon.png" />
+        <img class="feature__icon" src="img/favicons/lions-favicon.png" />
         <h4 class="heading-4">Membership</h4>
         <p class="feature__text">
           Creating a Blue Lions account unlocks exclusive video content,
@@ -37,7 +37,7 @@
         </p>
       </div>
       <div class="feature">
-        <img class="feature__icon" src="img/football-favicon.png" />
+        <img class="feature__icon" src="img/favicons/football-favicon.png" />
         <h4 class="heading-4">Official Supporters Clubs</h4>
         <p class="feature__text">
           We are proud to have 225 Official Supporters' Clubs in countries all
@@ -45,7 +45,7 @@
         </p>
       </div>
       <div class="feature">
-        <img class="feature__icon" src="img/stadium-favicon.png" />
+        <img class="feature__icon" src="img/favicons/stadium-favicon.png" />
         <h4 class="heading-4">Tickets & Hospitality</h4>
         <p class="feature__text">
           A Blue Lions membership allows supporters priority purchasing matchday
@@ -54,7 +54,7 @@
         </p>
       </div>
       <div class="feature">
-        <img class="feature__icon" src="img/pin-favicon.png" />
+        <img class="feature__icon" src="img/favicons/pin-favicon.png" />
         <h4 class="heading-4">Location</h4>
         <p class="feature__text">
           Our stadium, ticket office and merchandise shop are all located in the
@@ -62,7 +62,7 @@
         </p>
       </div>
       <div class="feature">
-        <img class="feature__icon" src="img/partners-favicon.png" />
+        <img class="feature__icon" src="img/favicons/partners-favicon.png" />
         <h4 class="heading-4">Partners</h4>
         <p class="feature__text">
           We are proud to recognise 18 official club partners this season, as
@@ -70,7 +70,7 @@
         </p>
       </div>
       <div class="feature">
-        <img class="feature__icon" src="img/trophy-favicon.png" />
+        <img class="feature__icon" src="img/favicons/trophy-favicon.png" />
         <h4 class="heading-4">Trophies</h4>
         <p class="feature__text">
           The Blue Lions have won it all. 25 league titles, 15 domestic cups and
