tidied up sidebar grid sponsors and files

--- a/index.html
+++ b/index.html
@@ -21,6 +21,21 @@
     <!-- Sidebar -->
     <div class="sidebar">
       <img class="sidebar__badge" src="img/football-badge.png" alt="badge" />
+      <img
+        class="sidebar__logo--1"
+        src="img/logos/shalbourne.png"
+        alt="shalbourne-logo"
+      />
+      <img
+        class="sidebar__logo--2"
+        src="img/logos/e-payel.png"
+        alt="e-payel-logo"
+      />
+      <img
+        class="sidebar__logo--3"
+        src="img/logos/subiro.png"
+        alt="subiro-logo"
+      />
     </div>
 
     <header class="header">Header</header>
@@ -85,7 +100,7 @@
       <img class="story__img--2" src="img/mural.png" />
     </div>
 
-    <!-- Story content sectionv -->
+    <!-- Story content section -->
     <div class="story__content">
       <h3 class="heading-3 mb-sm">Placeholder 1</h3>
       <h2 class="heading-2 mb-md">Placeholder 2</h2>
