starting on header

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <!-- Sidebar -->
     <div class="sidebar">
       <img class="sidebar__badge" src="img/football-badge.png" alt="badge" />
+      <h4 class="heading-4 sidebar__heading">Corporate Partners:</h4>
       <img
         class="sidebar__logo--1"
         src="img/logos/shalbourne.png"
@@ -36,9 +37,20 @@
         src="img/logos/subiro.png"
         alt="subiro-logo"
       />
+      <img
+        class="sidebar__logo--4"
+        src="img/logos/ultramarine.png"
+        alt="ultramarine-logo"
+      />
     </div>
 
-    <header class="header">Header</header>
+    <header class="header">
+      <img
+        src="img/logos/smart-house.png"
+        alt="Smart House"
+        class="header__logo"
+      />
+    </header>
 
     <div class="players">Top 3 players</div>
 
