new setup with for header design

--- a/index.html
+++ b/index.html
@@ -20,36 +20,14 @@
   <body class="container">
     <!-- Sidebar -->
     <div class="sidebar">
-      <img class="sidebar__badge" src="img/football-badge.png" alt="badge" />
       <img
-        class="sidebar__logo--1"
-        src="img/logos/shalbourne.png"
-        alt="shalbourne-logo"
-      />
-      <img
-        class="sidebar__logo--2"
-        src="img/logos/e-payel.png"
-        alt="e-payel-logo"
-      />
-      <img
-        class="sidebar__logo--3"
-        src="img/logos/subiro.png"
-        alt="subiro-logo"
-      />
-      <img
-        class="sidebar__logo--4"
-        src="img/logos/ultramarine.png"
-        alt="ultramarine-logo"
+        class="sidebar__badge"
+        src="img/identity/football-badge.png"
+        alt="badge"
       />
     </div>
 
-    <header class="header">
-      <img
-        src="img/logos/smart-house.png"
-        alt="Smart House"
-        class="header__logo"
-      />
-    </header>
+    <header class="header"></header>
 
     <div class="players">Top 3 players</div>
 
