basic markup added for header

--- a/index.html
+++ b/index.html
@@ -27,7 +27,24 @@
       />
     </div>
 
-    <header class="header"></header>
+    <!-- Header section -->
+    <header class="header">
+      <img
+        src="img/identity/clubname-dark.png"
+        alt="Club Name"
+        class="header__logo"
+      />
+      <h3 class="heading-3">Placeholder text</h3>
+      <h1 class="heading-1">Placeholder main text</h1>
+      <button class="btn">Placeholder button text</button>
+      <div class="header__corporate-text">Corporate Partners</div>
+      <div class="header__corporate-logos">
+        <img src="img/logos/e-payel.png" alt="E-payel logo" />
+        <img src="img/logos/shalbourne.png" alt="Shalbourne logo" />
+        <img src="img/logos/subiro.png" alt="Subiro logo" />
+        <img src="img/logos/ultramarine.png" alt="Ultramarine logo" />
+      </div>
+    </header>
 
     <div class="players">Top 3 players</div>
 
