Team Name files removed

--- a/index.html
+++ b/index.html
@@ -29,11 +29,7 @@
 
     <!-- Header section -->
     <header class="header">
-      <img
-        src="img/identity/clubname-light.png"
-        alt="Club Name"
-        class="header__logo"
-      />
+      <img src="" alt="Club Name" class="header__logo" />
       <h3 class="heading-3">Placeholder text</h3>
       <h1 class="heading-1">Placeholder main text</h1>
       <button class="btn">Placeholder button text</button>
