--- a/index.html
+++ b/index.html
@@ -29,10 +29,14 @@
 
     <!-- Header section -->
     <header class="header">
-      <img src="" alt="Club Name" class="header__logo" />
+      <img
+        src="img/identity/club-name.png"
+        alt="Club Name"
+        class="header__logo"
+      />
       <h3 class="heading-3">Placeholder text</h3>
       <h1 class="heading-1">Placeholder main text</h1>
-      <button class="btn">Placeholder button text</button>
+      <button class="btn header__btn">Placeholder button text</button>
       <div class="header__corporate-text">Corporate Partners</div>
       <div class="header__corporate-logos">
         <img src="img/logos/e-payel.png" alt="E-payel logo" />
