removal of sub text

--- a/index.html
+++ b/index.html
@@ -29,12 +29,7 @@
 
     <!-- Header section -->
     <header class="header">
-      <img
-        src="img/identity/club-name.png"
-        alt="Club Name"
-        class="header__logo"
-      />
-      <h3 class="heading-3">Placeholder text</h3>
+      <h3 class="heading-3 header__headline-text">Headline</h3>
       <h1 class="heading-1">Placeholder main text</h1>
       <button class="btn header__btn">Placeholder button text</button>
       <div class="header__corporate-text">Corporate Partners</div>
