--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <!-- Header section -->
     <header class="header">
       <h3 class="heading-3 header__headline-text">Headline</h3>
-      <h1 class="heading-1">Placeholder main text</h1>
-      <button class="btn header__btn">Placeholder button text</button>
+      <h1 class="heading-1">New training ground</h1>
+      <button class="btn header__btn">View More</button>
       <div class="header__corporate-text">Corporate Partners</div>
       <div class="header__corporate-logos">
         <img src="img/logos/e-payel.png" alt="E-payel logo" />
