--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <!-- Text for titles within the web application -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap"
       rel="stylesheet"
     />
     <title>Football Website</title>
