--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Header section -->
     <header class="header">
       <h3 class="heading-3 header__headline-text">Headline</h3>
-      <h1 class="heading-1">New training ground</h1>
+      <h1 class="heading-1">Our new training ground...</h1>
       <button class="btn header__btn">View More</button>
       <div class="header__corporate-text">Corporate Partners</div>
       <div class="header__corporate-logos">
