changing the sidebar again

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         src="img/identity/football-badge.png"
         alt="badge"
       />
+      <button class="nav-btn"></button>
     </div>
 
     <!-- Header section -->
