centering content in a button

--- a/index.html
+++ b/index.html
@@ -25,7 +25,14 @@
         src="img/identity/football-badge.png"
         alt="badge"
       />
-      <button class="nav-btn"></button>
+      <button class="menu-toggle">
+        <div class="menu-toggle__inner">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <div class="menu-toggle__label">More</div>
+      </button>
     </div>
 
     <!-- Header section -->
