--- a/index.html
+++ b/index.html
@@ -28,8 +28,6 @@
       <button class="menu-toggle">
         <div class="menu-toggle__inner">
           <span></span>
-          <span></span>
-          <span></span>
         </div>
         <div class="menu-toggle__label">More</div>
       </button>
@@ -38,7 +36,7 @@
     <!-- Header section -->
     <header class="header">
       <h3 class="heading-3 header__headline-text">Headline</h3>
-      <h1 class="heading-1">Our new training ground...</h1>
+      <h1 class="heading-1">Our new training ground</h1>
       <button class="btn header__btn">View More</button>
       <div class="header__corporate-text">Corporate Partners</div>
       <div class="header__corporate-logos">
