beginning of markup new section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <title>Football Website</title>
   </head>
   <body class="container">
-    <!-- Sidebar -->
+    <!-- Sidebar section -->
     <div class="sidebar">
       <img
         class="sidebar__badge"
@@ -47,9 +47,19 @@
       </div>
     </header>
 
-    <div class="players">Top 3 players</div>
+    <!-- Players section -->
+    <div class="players">
+      <h3 class="heading-3">Top 3 Goalscorers</h3>
+      <div class="players__list">
+        <img
+          src="img/players/Player1.png"
+          alt="Goalscorer 1"
+          class="players__image"
+        />
+      </div>
+    </div>
 
-    <!-- features section -->
+    <!-- Features section -->
     <section class="features">
       <div class="feature">
         <img class="feature__icon" src="img/favicons/lions-favicon.png" />
@@ -102,13 +112,13 @@
       </div>
     </section>
 
-    <!-- Story pictures section -->
+    <!-- Story Pictures section -->
     <div class="story__pictures">
       <img class="story__img--1" src="img/underpass.png" />
       <img class="story__img--2" src="img/mural.png" />
     </div>
 
-    <!-- Story content section -->
+    <!-- Story Content section -->
     <div class="story__content">
       <h3 class="heading-3 mb-sm">Placeholder 1</h3>
       <h2 class="heading-2 mb-md">Placeholder 2</h2>
@@ -118,7 +128,7 @@
       <button class="btn">Placeholder button text</button>
     </div>
 
-    <!-- Footer element -->
+    <!-- Footer section -->
     <footer class="footer">Footer</footer>
 
     <script src="javascript/script.js" charset="utf-8"></script>
