--- a/index.html
+++ b/index.html
@@ -51,11 +51,36 @@
     <div class="players">
       <h3 class="heading-3">Top 3 Goalscorers</h3>
       <div class="players__list">
+        <!-- Player one markup-->
         <img
           src="img/players/Player1.png"
           alt="Goalscorer 1"
           class="players__image"
         />
+        <div class="players__details">
+          <h4 class="heading-4 heading-4--light">Ishmael Jean-Baptiste</h4>
+          <p class="players__goals">18 league goals</p>
+        </div>
+        <!-- Player two markup -->
+        <img
+          src="img/players/Player2.png"
+          alt="Goalscorer 2"
+          class="players__image"
+        />
+        <div class="players__details">
+          <h4 class="heading-4 heading-4--light">Trystan Llewellyn</h4>
+          <p class="players__goals">14 league goals</p>
+        </div>
+        <!-- Player three markup -->
+        <img
+          src="img/players/Player3.png"
+          alt="Goalscorer 3"
+          class="players__image"
+        />
+        <div class="players__details">
+          <h4 class="heading-4 heading-4--light">Thomas Mahraz</h4>
+          <p class="players__goals">9 league goals</p>
+        </div>
       </div>
     </div>
 
