--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <img
           src="img/players/Player1.png"
           alt="Goalscorer 1"
-          class="players__image"
+          class="players__img"
         />
         <div class="players__details">
           <h4 class="heading-4 heading-4--light">Ishmael Jean-Baptiste</h4>
@@ -65,7 +65,7 @@
         <img
           src="img/players/Player2.png"
           alt="Goalscorer 2"
-          class="players__image"
+          class="players__img"
         />
         <div class="players__details">
           <h4 class="heading-4 heading-4--light">Trystan Llewellyn</h4>
@@ -75,7 +75,7 @@
         <img
           src="img/players/Player3.png"
           alt="Goalscorer 3"
-          class="players__image"
+          class="players__img"
         />
         <div class="players__details">
           <h4 class="heading-4 heading-4--light">Thomas Mahraz</h4>
