grid layout improvements

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <!-- Players section -->
     <div class="players">
-      <h3 class="heading-3">Top 3 Goalscorers</h3>
+      <h2 class="heading-2 heading-2--light">Top 3 Goalscorers</h2>
       <div class="players__list">
         <!-- Player one markup-->
         <img
