--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <title>Football Website</title>
   </head>
   <body class="container">
-    <!-- Sidebar section -->
-    <div class="sidebar">
+    <!-- Navbar section -->
+    <div class="navbar">
       <img
-        class="sidebar__badge"
+        class="navbar__badge"
         src="img/identity/football-badge.png"
         alt="badge"
       />
