players section edit

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
 
     <!-- Players section -->
     <div class="players">
-      <h2 class="heading-2 heading-2--light">Top 3 Goalscorers</h2>
+      <h2 class="heading-2 heading-2--light players__heading">
+        Top 3 Goalscorers
+      </h2>
       <div class="players__list">
         <!-- Player one markup-->
         <img
@@ -58,7 +60,9 @@
           class="players__img"
         />
         <div class="players__details">
-          <h4 class="heading-4 heading-4--light">Ishmael Jean-Baptiste</h4>
+          <h4 class="heading-4 heading-4--light players__name">
+            Ishmael Jean-Baptiste
+          </h4>
           <p class="players__goals">18 league goals</p>
         </div>
         <!-- Player two markup -->
@@ -68,7 +72,9 @@
           class="players__img"
         />
         <div class="players__details">
-          <h4 class="heading-4 heading-4--light">Trystan Llewellyn</h4>
+          <h4 class="heading-4 heading-4--light players__name">
+            Trystan Llewellyn
+          </h4>
           <p class="players__goals">14 league goals</p>
         </div>
         <!-- Player three markup -->
@@ -78,7 +84,9 @@
           class="players__img"
         />
         <div class="players__details">
-          <h4 class="heading-4 heading-4--light">Thomas Mahraz</h4>
+          <h4 class="heading-4 heading-4--light players__name">
+            Thomas Mahraz
+          </h4>
           <p class="players__goals">9 league goals</p>
         </div>
       </div>
