--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <h4 class="heading-4">Trophies</h4>
         <p class="feature__text">
           The Blue Lions have won it all. 25 league titles, 15 domestic cups and
-          8 international triumphs since we were founded in 1882.
+          8 international triumphs since we were founded in 1908.
         </p>
       </div>
     </section>
@@ -153,12 +153,23 @@
 
     <!-- Story Content section -->
     <div class="story__content">
-      <h3 class="heading-3 mb-sm">Placeholder 1</h3>
-      <h2 class="heading-2 mb-md">Placeholder 2</h2>
+      <h3 class="heading-3 mb-sm">A piece on our distinct culture...</h3>
+      <h2 class="heading-2 mb-md">Graffiti Art</h2>
       <p class="story__text">
-        Placeholder text for before I've come up with an idea
+        The fans of FC THG 08 are known for their strong sense of pride and
+        loyalty to the club, which is often reflected in the graffiti they
+        create around the stadium and throughout the city. These fans believe
+        that graffiti is a powerful way to express their love for the club and
+        to connect with other fans. They often depict the club's crest, players,
+        and slogans in blue, which is the traditional colour of FC THG 08. The
+        graffiti is often bold, striking, and visually striking and it serves as
+        a visual representation of the fans' commitment to the team. These fans
+        see their graffiti as a way to assert the team's identity in the
+        community and to create a sense of belonging among fans. Despite this
+        being considered as vandalism by some, the fans of FC THG 08 see it as a
+        way to add to the club's culture and to the city's culture.
       </p>
-      <button class="btn">Placeholder button text</button>
+      <button class="btn">Find out more</button>
     </div>
 
     <!-- Footer section -->
