media queries for images

--- a/index.html
+++ b/index.html
@@ -156,18 +156,16 @@
       <h3 class="heading-3 mb-sm">A piece on our distinct culture...</h3>
       <h2 class="heading-2 mb-md">Graffiti Art</h2>
       <p class="story__text">
-        The fans of FC THG 08 are known for their strong sense of pride and
-        loyalty to the club, which is often reflected in the graffiti they
-        create around the stadium and throughout the city. These fans believe
-        that graffiti is a powerful way to express their love for the club and
-        to connect with other fans. They often depict the club's crest, players,
-        and slogans in blue, which is the traditional colour of FC THG 08. The
-        graffiti is often bold, striking, and visually striking and it serves as
-        a visual representation of the fans' commitment to the team. These fans
-        see their graffiti as a way to assert the team's identity in the
-        community and to create a sense of belonging among fans. Despite this
-        being considered as vandalism by some, the fans of FC THG 08 see it as a
-        way to add to the club's culture and to the city's culture.
+        Fans of FC THG 08 are known for their strong sense of pride and loyalty
+        to the club, which is often reflected in the graffiti they create around
+        the stadium and throughout the city. These fans believe that graffiti is
+        a powerful way to express their love for the club and to connect with
+        other fans. They often depict the club's crest, players, and name in
+        blue - the traditional colour of FC THG 08. Graffiti is seen as a way to
+        assert the team's identity in the community and to create a sense of
+        belonging among fans. Despite this being considered as vandalism by
+        some, the fans of FC THG 08 see it as a way to add to their club's and
+        city's culture.
       </p>
       <button class="btn">Find out more</button>
     </div>
