base level responsitivity fixs

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
 
     <!-- Header section -->
     <header class="header">
-      <h3 class="heading-3 header__headline-text">Headline</h3>
+      <h3 class="heading-3 header__headline-text">
+        Placeholder for new date js
+      </h3>
       <h1 class="heading-1">Our new training ground</h1>
       <button class="btn header__btn">View More</button>
       <div class="header__corporate-text">Corporate Partners</div>
