--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     </div>
 
     <!-- Footer section -->
-    <footer class="footer">Footer</footer>
+    <footer class="footer">FC THG 08 - Tristan G © 2022-2023</footer>
 
     <script src="javascript/script.js" charset="utf-8"></script>
   </body>
