beginning of rebranding

--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
     <!-- Features section -->
     <section class="features">
       <div class="feature">
-        <img class="feature__icon" src="img/favicons/lions-favicon.png" />
+        <img class="feature__icon" src="img/favicons/serpent-favicon.png" />
         <h4 class="heading-4">Membership</h4>
         <p class="feature__text">
-          Creating a Blue Lions account unlocks exclusive video content,
+          Creating a Sea Serpents account unlocks exclusive video content,
           including match highlights, player interviews and analysis.
         </p>
       </div>
