font awesome icons first added - new thoughts on nav

--- a/index.html
+++ b/index.html
@@ -15,10 +15,48 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap"
       rel="stylesheet"
     />
+    <!-- Font Awesome -->
+    <script
+      src="https://kit.fontawesome.com/4d593f14b8.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- Title of Website -->
     <title>Football Website</title>
   </head>
   <body class="container">
     <!-- Navbar section -->
+
+    <!-- Navbar first row -->
+    <nav class="first-nav">
+      <ul class="first-nav-list">
+        <!-- Sign up nav item-->
+        <li class="first-nav-item">
+          <a href="#" class="first-nav-link"
+            ><i class="fa-solid fa-right-to-bracket"></i>Sign Up / Log In</a
+          >
+        </li>
+
+        <li class="first-nav-item">
+          <a href="#" class="first-nav-link"
+            ><i class="fa-solid fa-cart-shopping"></i>Cart(<span>2 Items</span
+            >)</a
+          >
+        </li>
+
+        <li class="first-nav-item">
+          <a href="#" class="first-nav-link"
+            ><i class="fa-solid fa-truck"></i>Order Now</a
+          >
+        </li>
+
+        <li class="first-nav-item">
+          <a href="#" class="first-nav-link"
+            ><i class="fa-solid fa-heart"></i>Wish List</a
+          >
+        </li>
+      </ul>
+    </nav>
+
     <div class="navbar">
       <img
         class="navbar__badge"
