tidy up with sass principles

--- a/index.html
+++ b/index.html
@@ -24,33 +24,36 @@
     <title>Football Website</title>
   </head>
   <body class="container">
-    <!-- Navbar section -->
-    <!-- Navbar first row -->
-    <nav class="first-nav">
-      <ul class="first-nav-list">
-        <li class="first-nav-item">
-          <a href="#" class="first-nav-link"
-            ><i class="fa-solid fa-right-to-bracket"></i>Sign Up / Log In</a
-          >
-        </li>
-        <li class="first-nav-item">
-          <a href="#" class="first-nav-link"
-            ><i class="fa-solid fa-cart-shopping"></i>Cart(<span>2 Items</span
-            >)</a
-          >
-        </li>
-        <li class="first-nav-item">
-          <a href="#" class="first-nav-link"
-            ><i class="fa-solid fa-truck"></i>Order Now</a
-          >
-        </li>
-        <li class="first-nav-item">
-          <a href="#" class="first-nav-link"
-            ><i class="fa-solid fa-heart"></i>Wish List</a
-          >
-        </li>
-      </ul>
-    </nav>
+    <!-- First Navbar section -->
+    <!-- Navbar container I've added in for background-color -->
+    <div class="first-nav__container">
+      <!-- First Navbar content-->
+      <nav class="first-nav__content">
+        <ul class="first-nav__list">
+          <li class="first-nav__item">
+            <a href="#" class="first-nav__link"
+              ><i class="fa-solid fa-right-to-bracket"></i>Sign Up / Log In</a
+            >
+          </li>
+          <li class="first-nav__item">
+            <a href="#" class="first-nav__link"
+              ><i class="fa-solid fa-cart-shopping"></i>Cart(<span>2 Items</span
+              >)</a
+            >
+          </li>
+          <li class="first-nav__item">
+            <a href="#" class="first-nav__link"
+              ><i class="fa-solid fa-truck"></i>Order Now</a
+            >
+          </li>
+          <li class="first-nav__item">
+            <a href="#" class="first-nav__link"
+              ><i class="fa-solid fa-heart"></i>Wish List</a
+            >
+          </li>
+        </ul>
+      </nav>
+    </div>
 
     <div class="navbar">
       <img
