markup for search aspect of first nav

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- First Navbar section -->
     <!-- Navbar container I've added in for background-color -->
     <div class="first-nav__container">
-      <!-- First Navbar content-->
+      <!-- First Navbar content -- links with favicons section -->
       <nav class="first-nav__content">
         <ul class="first-nav__list">
           <li class="first-nav__item">
@@ -53,6 +53,13 @@
           </li>
         </ul>
       </nav>
+      <!-- Search form section of first nav -->
+      <div class="search">
+        <form class="search__form">
+          <input type="text" class="search__input" placeholder="Search" />
+          <button class="search__btn"><i class="fas fa-search"></i></button>
+        </form>
+      </div>
     </div>
 
     <div class="navbar">
