markup being altered

--- a/index.html
+++ b/index.html
@@ -61,20 +61,24 @@
         </form>
       </div>
     </div>
-
-    <div class="navbar">
+    <!-- Second Navbar section -->
+    <nav class="second-nav">
+      <!-- logo of the football team -->
       <img
-        class="navbar__badge"
+        class="second-nav__badge"
         src="img/identity/football-badge.png"
         alt="badge"
       />
+      <!-- list of items to select in second navbar -->
+      <ul class="second-nav__list"></ul>
+      <!-- styled burger menu for smaller devices -->
       <button class="menu-toggle">
         <div class="menu-toggle__inner">
           <span></span>
         </div>
         <div class="menu-toggle__label">More</div>
       </button>
-    </div>
+    </nav>
 
     <!-- Header section -->
     <header class="header">
